--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,4 +11,86 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+code {
+  background: #d0d0d5;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container {
+  max-width: 95%;
+}
+
+textarea {
+  width: 100%;
+}
+
+#user-stories {
+  font-size: 1.2em;
+}
+
+#output-container,
+#solution-container,
+#text-input,
+#locale-select,
+button {
+  font-size: 1.1em;
+}
+
+#output-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+#solution-container {
+  font-weight: bold;
+}
+
+#solution-container {
+  margin-left: 20px;
+}
+
+#translated-sentence {
+  margin-top: 10px;
+  font-weight: normal;
+}
+
+#error-msg {
+  font-weight: normal;
+  color: red;
+}
+
+.highlight {
+  color: green;
+}
+
+#text-input {
+  padding: 10px;
+}
+
+@media (min-width: 800px) {
+  .container {
+    flex-direction: row;
+  }
+
+  .form-container {
+    align-self: flex-end;
+  }
+
+  #output-container {
+    flex-direction: row;
+    margin-top: 0;
+    margin-left: 20px;
+  }
+
+  #solution-container {
+    width: 75%;
+    margin-top: 0;
+  }
 }
